--- a/index.html
+++ b/index.html
@@ -14,31 +14,170 @@
 </head>
 
 <body>
-<header class="menu-bar">
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-2">
-                <img src="img/logo.png" alt="Logo header" class="logo">
-            </div>
-            <div class="col-xl-8 ml-auto align-self-center">
-                <nav>
-                    <ul class="menu d-flex justify-content-end">
-                        <li class="menu__item"><a href="#">Home</a></li>
-                        <li class="menu__item"><a href="#">About</a></li>
-                        <li class="menu__item"><a href="#">Servicing</a></li>
-                        <li class="menu__item"><a href="#">Portfolio</a></li>
-                        <li class="menu__item"><a href="#">Blog</a></li>
-                        <li class="menu__item"><a href="#">Contact us</a></li>
-                        <li class="menu__item"><i class="fas fa-search"></i></li>
-                    </ul>              
-                </nav>
+    <header class="menu-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-2">
+                    <img src="img/logo.png" alt="Logo header" class="logo">
+                </div>
+                <div class="col-xl-8 ml-auto align-self-center">
+                    <nav>
+                        <ul class="menu d-flex justify-content-end">
+                            <li class="menu__item"><a href="#">Home</a></li>
+                            <li class="menu__item"><a href="#">About</a></li>
+                            <li class="menu__item"><a href="#">Servicing</a></li>
+                            <li class="menu__item"><a href="#">Portfolio</a></li>
+                            <li class="menu__item"><a href="#">Blog</a></li>
+                            <li class="menu__item"><a href="#">Contact us</a></li>
+                            <li class="menu__item"><i class="fas fa-search"></i></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
+    </header>
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <h1 class="header__title">Web development project</h1>
+                    <p class="header__text">Very suitable to support all web development projects</p>
+                    <button class="button">Our services</button>
+                    <button class="button">Hire is now</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="about">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8    ">
+                    <h2 class="about__title">About us</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod blanditiis
+                        dolor aliquam magni excepturi nobis rem?</p>
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-xl-3">
+                    <img src="img/internet.png" alt="icons_internet">
+                    <h3 class="about_h3">Awesome Icons</h3>
+                    <p class="about_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis aspernatur
+                        neque adipisci sed! Omnis, veniam!</p>
+                </div>
+                <div class="col-xl-3">
+                    <img src="img/transfer.png" alt="transfer icon">
+                    <h3 class="about_h3">One Page</h3>
+                    <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum necessitatibus
+                        fugit fuga odit aliquam doloribus.</p>
+                </div>
+                <div class="col-xl-3">
+                    <img src="img/head.png" alt="icon head">
+                    <h3 class="about_h3">Fully responive</h3>
+                    <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deserunt amet
+                        quam facilis, minima alias.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Our services</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod blanditiis
+                        dolor
+                        aliquam magni excepturi nobis rem?</p>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-search icon"></i>
+                        <h3 class="about_h3">Research</h3>
+                        <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi
+                            vero molestiae et, nisi error!</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="far fa-address-book icon"></i>
+                        <h3 class="about_h3">Portfolio</h3>
+                        <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi
+                            vero molestiae et, nisi error!</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="far fa-question-circle icon"></i>
+                        <h3 class="about_h3">Support</h3>
+                        <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi
+                            vero molestiae et, nisi error!</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="far fa-file-word icon"></i>
+                        <h3 class="about_h3">Documentation</h3>
+                        <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi
+                            vero molestiae et, nisi error!</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-layer-group icon"></i>
+                        <h3 class="about_h3">Development</h3>
+                        <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi
+                            vero molestiae et, nisi error!</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-pencil-ruler icon"></i>
+                        <h3 class="about_h3">Design</h3>
+                        <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi
+                            vero molestiae et, nisi error!</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<section class="portfolio">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-xl-8">
+                <h2 class="about__title">Latest Works</h2>
+                <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod blanditiis
+                    dolor
+                    aliquam magni excepturi nobis rem?</p>
+                    <button val="on" class="button" filter="all">All</button>
+                    <button val="off" class="button" filter="wd">Web design</button>
+                    <button val="off" class="button" filter="ud">UI/UX design</button>
+                    <button val="off" class="button" filter="moc">Mockups</button>
+            </div>
+        </div>
+        <div class="row filter">
+            <div filter="wd" class="col-xl-4"><img src="img/img-1.png" alt=""></div>
+            <div filter="moc" class="col-xl-4"><img src="img/img-2.png" alt=""></div>
+            <div filter="wd" class="col-xl-4"><img src="img/img-3.png" alt=""></div>
+            <div filter="moc" class="col-xl-4"><img src="img/img-4.png" alt=""></div>
+            <div filter="ud" class="col-xl-4"><img src="img/img-5.png" alt=""></div>
+            <div filter="ud" class="col-xl-4"><img src="img/img-6.png" alt=""></div>
+        </div>
     </div>
-</header>
-
-
-
+    <div class="row">
+        <div class="col-xl-12">
+            <button class="button">View all</button>
+        </div>
+    </div>
+</section>
 
 
 
@@ -68,6 +207,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
